kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cerberus-ui-service
  name: cerberus-ui-service
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
  selector:
    name: cerberus-ui-service
