kube/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cerberus-ui-service
  labels:
    cert-manager.io/solver: http01
  annotations:
    cert-manager.io/enabled: 'true'
    kubernetes.io/ingress.class: 'nginx-external'
    ingress.kubernetes.io/backend-protocol: 'HTTPS'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    ingress.kubernetes.io/proxy-read-timeout: '3600'
    ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  rules:
    - host: $(CERBERUS_UI_URL)
      http:
        paths:
          - path: /
            backend:
              serviceName: cerberus-ui-service
              servicePort: https
          - path: /camunda
            backend:
              serviceName: workflow-service
              servicePort: https

  tls:
    - hosts:
        - $(CERBERUS_UI_URL)
      secretName: cerberus-ui-service-cmio
