kube/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cerberus-ui-service
spec:
  podSelector:
    matchLabels:
      name: cerberus-ui-service
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-external
      ports:
        - port: 10443
          protocol: TCP
